--- a/src/components/styles/Badge.css
+++ b/src/components/styles/Badge.css
@@ -1,6 +1,6 @@
 .Badge {
-    background: #ffffff;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
+    background: #FFFFFF;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.10);
     border-radius: 8px 8px 8px 8px;
     overflow: hidden;
     height: 380px;
@@ -9,7 +9,7 @@
 .Badge__header {
     padding: 0.5rem 0;
     height: 80px;
-    background: #1b1b25;
+    background: #1B1B25;
     display: flex;
     justify-content: center;
 }
@@ -27,8 +27,9 @@
     justify-content: center;
     align-items: center;
     padding: 0.5rem 0;
-    background: #f4f4f7;
+    background: #F4F4F7;
 }
+
 
 .Badge__avatar {
     border-radius: 50%;
@@ -42,7 +43,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    color: #98ca3f;
+    color: #98CA3F;
     font-weight: bold;
     font-style: italic;
 }
