--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,75 @@
-.App {
-    text-align: center;
+
+@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700');
+@import url('https://fonts.googleapis.com/css?family=Anton');
+
+
+* {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
-.App-logo {
-    animation: App-logo-spin infinite 20s linear;
-    height: 40vmin;
-    pointer-events: none;
+body {
+    font-family: 'Lato', 'Helvetica Neue', sans-serif;
+    background-color: #F4F4F7;
 }
 
-.App-header {
-    background-color: #282c34;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
+h1 {
+    font-family: 'Anton', sans-serif;
 }
 
-.App-link {
-    color: #61dafb;
+a.link-unstyled {
+    color: inherit;
 }
 
-@keyframes App-logo-spin {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
+a.link-unstyled:hover {
+    color: inherit;
+    text-decoration: none;
+}
+
+.btn {
+    padding: 0.375rem 2rem;
+}
+
+.btn.btn-primary {
+    color: #fff;
+    background-color: #7DCD40;
+    border-color: #7DCD40;
+}
+
+.btn.btn-primary:not(:disabled):not(.disabled):hover {
+    color: #fff;
+    background-color: #7DCD40;
+    border-color: #7DCD40;
+}
+
+.btn.btn-primary:not(:disabled):not(.disabled):active {
+    color: #fff;
+    background-color: #7DCD40;
+    border-color: #7DCD40;
+}
+
+.btn.btn-primary:not(:disabled):not(.disabled):focus {
+    box-shadow: 0 0 0 0.2rem rgba(125, 205, 64, 0.5);
+}
+
+.btn.btn-danger {
+    color: #fff;
+    background-color: #CD4040;
+    border-color: #CD4040;
+}
+
+.btn.btn-danger:not(:disabled):not(.disabled):hover {
+    color: #fff;
+    background-color: #CD4040;
+    border-color: #CD4040;
+}
+
+.btn.btn-danger:not(:disabled):not(.disabled):active {
+    color: #fff;
+    background-color: #CD4040;
+    border-color: #CD4040;
+}
+
+.btn.btn-danger:not(:disabled):not(.disabled):focus {
+    box-shadow: 0 0 0 0.2rem rgba(255, 64, 64, 0.5);
 }
